<resources>
    <string name="app_name">SmartCalc</string>
    <string name="maths">Maths</string>
    <string name="prime_factorization">Prime factorization</string>
    <string name="number_to_factorize_hint">Number to Factorize</string>
    <string name="factorize_button">Factorize</string>
    <string name="factorize_result_declaration">Prime factors:</string>
    <string name="greatest_common_factor">Greatest Common Factor</string>
    <string name="least_common_multiple">Least Common Multiple</string>
    <string name="complex_numbers">Complex Numbers</string>
    <string name="physics">Physics</string>
    <string name="special_relativity">Special Relativity</string>
    <string name="adding_velocities">Adding velocities</string>
    <string name="velocity1">Velocity 1</string>
    <string name="velocity2">Velocity 2</string>
    <string name="add_button_text">Add</string>
    <string name="time_dilation">Time Dilation</string>
    <string name="proper_time">Proper Time</string>
    <string name="dilated_time">Dilated Time:</string>
    <string name="length_contraction">Length Contraction</string>
    <string name="proper_length">Proper Length</string>
    <string name="contracted_length">Contracted Length: </string>
    <string name="faster_than_light">Faster than light</string>
    <string name="faster_than_light_message">You can\'t go faster than light</string>
    <string name="mass">Mass</string>
    <string name="schwarzchild_radius">Schwarzchild Radius</string>
    <string name="chemistry">Chemistry</string>
    <string name="mol">Mol:</string>
    <string name="mass_in_u">Mass in u:</string>
    <string name="mass_in_g">Mass in g:</string>
    <string name="particles">Particles:</string>
    <string name="volume_in_l">Volume in L:</string>
    <string name="temperature_colon">Temperature:</string>
    <string name="elements">Elements</string>
    <string name="fragment_element_atomic_mass">Atomic Mass:</string>
    <string name="fragment_element_abbreviation">Abbreviation:</string>
    <string name="year_of_discovery_text">Year of Discovery:</string>
    <string name="density">Density:</string>
    <string name="action_bar_pager_show_list">List</string>
    <string name="unknown">Unknown</string>
    <string name="before_christ">B.C.</string>
    <string name="xs_drawer_open">show a list of all elements</string>
    <string name="xs_drawer_close">close list</string>
    <string name="gpcm3">g/cm3</string>
    <string name="solid_or_liquid">Solid/Liquid</string>
    <string name="gas">Gas</string>
    <string name="biology">Biology</string>
    <string name="bmi_title">Calculate Your BMI</string>
    <string name="enter_your_weight">Enter your weight</string>
    <string name="enter_your_length">Enter your length</string>
    <string name="your_bmi_is">Your BMI is:</string>
    <string name="info">Info</string>
    <string-array name="BMIStateNames">
        <item>Very Severely Underweight</item>
        <item>Severely Underweight</item>
        <item>Underweight</item>
        <item>Good Weight</item>
        <item>Overweight</item>
        <item>Moderately Obese</item>
        <item>Severely Obese</item>
        <item>Very Severely Obese</item>
    </string-array>
    <string-array name="BMIStateValues">
        <item>Less than 15</item>
        <item>15 to 16</item>
        <item>16 to 18.5</item>
        <item>18.5 to 25</item>
        <item>25 to 30</item>
        <item>30 to 35</item>
        <item>35 to 40</item>
        <item>Greater than 40</item>
    </string-array>
    <string name="convert">Convert</string>
    <string name="converter">Converter</string>
    <string name="velocity">Velocity</string>
    <string name="meters_per_second">Meters/sec</string>
    <string name="meters_per_second_abbr">m/s</string>
    <string name="km_per_hour">Km/hour</string>
    <string name="km_per_hour_abbr">km/h</string>
    <string name="miles_per_hour">Miles/hour</string>
    <string name="miles_per_hour_abbr">mph</string>
    <string name="feet_per_second">Feet/sec</string>
    <string name="feet_per_second_abbr">ft/s</string>
    <string name="knots">Knots</string>
    <string name="knots_abbr">kn</string>
    <string name="time">Time</string>
    <string name="time_conversion">Time Conversion</string>
    <string name="nanoseconds">Nanoseconds</string>
    <string name="nanoseconds_abbr">ns</string>
    <string name="microsecond">Microseconds</string>
    <string name="microsecond_abbr">μs</string>
    <string name="millisecond">Milliseconds</string>
    <string name="millisecond_abbr">ms</string>
    <string name="second">Seconds</string>
    <string name="second_abbr">s</string>
    <string name="minute">Minutes</string>
    <string name="minute_abbr">min</string>
    <string name="hour">Hours</string>
    <string name="hour_abbr">hr</string>
    <string name="day">Days</string>
    <string name="day_abbr">day</string>
    <string name="week">Weeks</string>
    <string name="week_abbr">wk</string>
    <string name="month">Months</string>
    <string name="month_abbr">mo</string>
    <string name="years">Years</string>
    <string name="years_abbr">yr</string>
    <string name="decade">Decades</string>
    <string name="decade_abbr">deci</string>
    <string name="century">Centuries</string>
    <string name="century_abbr">cent</string>
    <string name="length">Length</string>
    <string name="length_conversion">Length Conversion</string>
    <string name="kilometer">Kilometers</string>
    <string name="kilometer_abbr">km</string>
    <string name="centimeter">Centimeters</string>
    <string name="centimeter_abbr">cm</string>
    <string name="millimeter">Millimeters</string>
    <string name="millimeter_abbr">mm</string>
    <string name="foot">Feet</string>
    <string name="foot_abbr">ft</string>
    <string name="mile">Miles</string>
    <string name="mile_abbr">mi.</string>
    <string name="yard">Yards</string>
    <string name="yard_abbr">yd.</string>
    <string name="inch">Inches</string>
    <string name="inch_abbr">in</string>
    <string name="nautical_mile">Nautical Miles</string>
    <string name="nautical_mile_abbr">NM</string>
    <string name="meter">Meters</string>
    <string name="meter_abbr">m</string>
    <string name="micrometer">Micrometers</string>
    <string name="micrometer_abbr">µm</string>
    <string name="nanometer">Nanometers</string>
    <string name="nanometer_abbr">nm</string>
    <string name="planck_length">Planck Lengths</string>
    <string name="planck_length_abbr">ℓP</string>
    <string name="kilogram">Kilograms</string>
    <string name="kilogram_abbr">kg</string>
    <string name="tonne">Tonnes</string>
    <string name="tonne_abbr">t</string>
    <string name="gram">Grams</string>
    <string name="gram_abbr">g</string>
    <string name="milligram">Milligrams</string>
    <string name="milligram_abbr">mg</string>
    <string name="long_ton">Long tons</string>
    <string name="long_ton_abbr">LT</string>
    <string name="short_ton">Short tons</string>
    <string name="short_ton_abbr">ST</string>
    <string name="stone">Stones</string>
    <string name="stone_abbr">st</string>
    <string name="pound">Pounds</string>
    <string name="pound_abbr">lb</string>
    <string name="ounce">Ounces</string>
    <string name="ounce_abbr">oz</string>
    <string name="temperature">Temperature</string>
    <string name="kelvin">Kelvin</string>
    <string name="kelvin_abbr">K</string>
    <string name="celsius">Degrees Celsius</string>
    <string name="celsius_abbr">°C</string>
    <string name="fahrenheit">Degrees Fahrenheit</string>
    <string name="fahrenheit_abbr">°F</string>
    <string name="number_1">Number 1</string>
    <string name="number_2">Number 2</string>
    <string name="calculate">Calculate</string>
    <string name="error">Error</string>
    <string name="invalid_number_title">Invalid number</string>
    <string name="invalid_number_message">Please enter a valid number.</string>
    <string name="hydrogen">Hydrogen</string>
    <string name="helium">Helium</string>
    <string name="lithium">Lithium</string>
    <string name="beryllium">Beryllium</string>
    <string name="boron">Boron</string>
    <string name="carbon">Carbon</string>
    <string name="nitrogen">Nitrogen</string>
    <string name="oxygen">Oxygen</string>
    <string name="fluorine">Fluorine</string>
    <string name="neon">Neon</string>
    <string name="sodium">Sodium</string>
    <string name="magnesium">Magnesium</string>
    <string name="aluminum">Aluminum</string>
    <string name="silicon">Silicon</string>
    <string name="phosphorus">Phosphorus</string>
    <string name="sulfur">Sulfur</string>
    <string name="chlorine">Chlorine</string>
    <string name="argon">Argon</string>
    <string name="potassium">Potassium</string>
    <string name="calcium">Calcium</string>
    <string name="scandium">Scandium</string>
    <string name="titanium">Titanium</string>
    <string name="vanadium">Vanadium</string>
    <string name="chromium">Chromium</string>
    <string name="manganese">Manganese</string>
    <string name="iron">Iron</string>
    <string name="cobalt">Cobalt</string>
    <string name="nickel">Nickel</string>
    <string name="copper">Copper</string>
    <string name="zinc">Zinc</string>
    <string name="gallium">Gallium</string>
    <string name="germanium">Germanium</string>
    <string name="arsenic">Arsenic</string>
    <string name="selenium">Selenium</string>
    <string name="bromine">Bromine</string>
    <string name="krypton">Krypton</string>
    <string name="rubidium">Rubidium</string>
    <string name="strontium">Strontium</string>
    <string name="yttrium">Yttrium</string>
    <string name="zirconium">Zirconium</string>
    <string name="niobium">Niobium</string>
    <string name="molybdenum">Molybdenum</string>
    <string name="plain_text">Plain Text</string>
    <string name="key">Key</string>
    <string name="ciphertext">Ciphertext</string>
    <string name="encode">Encode</string>
    <string name="decode">Decode</string>
    <string name="decimal">Decimal</string>
    <string name="hexadecimal">Hexadecimal</string>
    <string name="binary">Binary</string>
    <string name="name">Name</string>
    <string name="characters">Characters</string>
    <string name="visible">Visible</string>
    <string name="no_data">No Data</string>
    <string name="ambient_air_temp">Ambient Air Temperature</string>
    <string name="ambient_air_pressure">Ambient Air Pressure</string>
    <string name="ambient_light">Ambient Light</string>
    <string name="relative_humidity">Relative Humidity</string>
    <string name="create_keys">Create Keys</string>
    <string name="encrypt">Encrypt</string>
    <string name="decrypt">Decrypt</string>
    <string name="choose_one_of_these_options_colon">Choose one of these options:</string>
    <string name="choose_e_fragment_heading">Choose E</string>
    <string name="choose_e_fragment_explanation">Type in a number which e must approach. This number doesn\'t have to be big.</string>
    <string name="calculate_d">Calculate D</string>
    <string name="calculate_e">Calculate E</string>
    <string name="done">Done</string>
    <string name="private_key_colon">Private key:</string>
    <string name="public_key_colon">Public key:</string>
    <string name="enter_the_public_key">Enter the public key:</string>
    <string name="enter_the_cipher">Enter the cipher:</string>
    <string name="cipher">Cipher</string>
    <string name="enter_the_private_key">Enter the private key:</string>
    <string name="crack">Crack</string>
    <string name="current_unix_time_colon">Current Unix Time:</string>
    <string name="countdown_to_end_of_unix_time_colon">Countdown to end of Unix Time:</string>
    <string name="pick_date">Pick Date</string>
    <string name="pick_time">Pick Time</string>
    <string name="unix_time">Unix Time</string>
</resources>