<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crack"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_the_cipher"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/cipher_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cipher"
        android:inputType="number" />

    <TextView
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_the_public_key"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/n_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="n"
        android:inputType="number" />

    <EditText
        android:id="@+id/e_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="e"
        android:inputType="number" />

</LinearLayout>