<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="textCapWords|textNoSuggestions" />

    <EditText
        android:id="@+id/characters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/characters"
        android:inputType="textNoSuggestions" />

    <CheckBox
        android:id="@+id/visible_checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/visible"
        android:checked="true"/>

</LinearLayout>