<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_app_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/ambient_air_temp_decl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ambient_air_temp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/ambient_air_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/no_data"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/ambient_air_pressure_decl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ambient_air_pressure"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/ambient_air_pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/no_data"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/ambient_light_decl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ambient_light"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/ambient_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/no_data"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/relative_humidity_decl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/relative_humidity"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/relative_humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/no_data"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>


</LinearLayout>