<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <EditText
        android:id="@+id/number_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/number_1"
        android:inputType="number"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/number_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/number_1"
        android:hint="@string/number_2"
        android:inputType="number"
        android:textSize="25sp"
        android:imeOptions="actionGo"/>

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/number_2"
        android:onClick="onClickCalculate"
        android:text="@string/calculate"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/result_gcf_or_lcm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/calculate_button"
        android:layout_centerVertical="true"
        android:textSize="40sp" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@style/progress_bar_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/calculate_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

</RelativeLayout>