<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_e_fragment_heading"
        android:textAppearance="?android:textAppearanceLarge" />

    <TextView
        android:id="@+id/explanation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/heading"
        android:text="@string/choose_e_fragment_explanation"
        android:textAppearance="?android:textAppearanceMedium" />

    <EditText
        android:id="@+id/edit_text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/explanation"
        android:layout_marginTop="30dp"
        android:inputType="number" />

    <Button
        android:id="@+id/calculate_e_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_text1"
        android:text="@string/calculate_e" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@style/progress_bar_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/calculate_e_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/e_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/calculate_e_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/calculate_d_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/progress_bar"
        android:text="@string/calculate_d" />

    <ProgressBar
        android:id="@+id/progress_bar2"
        style="@style/progress_bar_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/calculate_d_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/d_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/calculate_d_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/white" />

</RelativeLayout>