<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/done"/>

    <TextView
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/public_key_colon"
        android:textSize="18sp"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/public_key_n"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="n = "
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/public_key_e"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="e = "
        android:textSize="18sp"/>

    <TextView
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/private_key_colon"
        android:textSize="18sp"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/private_key_n"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="n = "
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/private_key_d"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="d = "
        android:textSize="18sp"/>

</LinearLayout>